--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,13 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:1.5.9.RELEASE")
-    compile("org.springframework.boot:spring-boot-starter-web:1.5.9.RELEASE")
+
+    // JPA Data (We are going to use Repositories, Entities, Hibernate, etc...)
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.9.RELEASE'
+
+    // Use MySQL Connector-J
+    compile 'mysql:mysql-connector-java:5.1.13'
+
     //compile("org.springframework.boot:spring-boot-starter-data-jpa:1.5.9.RELEASE")
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
