--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
- port: 9000
+  port: 9000
+spring:
+  jpa:
+    database: MYSQL
+    hibernate:
+      ddl-auto: create
+  datasource:
+    url: jdbc:mysql://localhost:3306/testdb?useSSL=false
+    username: test
+    password: 1234
+    driver-class-name: com.mysql.jdbc.Driver
